--- a/styles.css
+++ b/styles.css
@@ -28,28 +28,45 @@ h1, h2, h3, h4, h5, h6, p, a {
 
 #hero {
     background-image: url(images/bg-header-desktop.png);
-    height: 60vh;
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
-    padding-top: 110px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .btn-primario {
     color: #FFFFFF;
     background-color: hsl(171, 66%, 44%);
-    padding:14px 34px;
+    padding:13px 34px;
     border-radius: 20px;
     font-size: 18px;
     font-weight: 600;
-    border-color: hsla(171, 66%, 44%, 0.384);
+    border-color: hsl(171, 66%, 44%);
 }
 
 .btn-secundario {
     color: #FFFFFF;
-    background-color: hsl(233, 100%, 69%);;
-    padding:14px 34px;
+    background-color: hsl(233, 100%, 69%);
+    padding: 13px 34px;
     border-radius: 20px;
     font-size: 18px;
     font-weight: 600;
+    border-color: hsl(233, 100%, 69%);
+}
+
+
+
+@media (max-width: 768px) {
+    .btn-primario, .btn-secundario {
+        font-size:17px;
+        padding:13px 70px;
+    }
+
+    #hero h2 {
+        font-size: 17px;
+        line-height: 1.5;
+        letter-spacing: 1.6;
+    }
+
 }
