--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,10 @@ h1, h2, h3, h4, h5, h6, p, a {
     border-color: hsl(171, 66%, 44%);
 }
 
+.btn-primario:hover, .btn-secundario:hover {
+    opacity: 0.7;
+}
+
 .btn-secundario {
     color: #FFFFFF;
     background-color: hsl(233, 100%, 69%);
@@ -64,8 +68,37 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 
+.enlaces {
+    color:#4f5459;
+    text-decoration: none;
+    font-size:18px;
+    margin-bottom: 18px;
+}
+
+.enlaces:hover {
+    color:hsl(171, 66%, 44%);
+}
+
+footer {
+    padding:60px 0;
+    background:#f5f6f8;
+}
+
+a.social svg path:hover {
+    fill: hsl(171, 66%, 44%);
+}
+
+
 
 @media (max-width: 768px) {
+
+    #hero {
+        background-image: url(images/bg-header-mobile.png);
+        background-size: cover;
+        background-position: top;
+        background-repeat: no-repeat;
+    }
+
     .btn-primario, .btn-secundario {
         font-size:17px;
         padding:13px 70px;
